# Pint-OperatingSystem

./: CMakeLists.txt  README.md
com-gdb/share/info/: annotate.info  gdb.info  stabs.info
com-gdb/share/man/man1/: i686-elf-gdb.1  i686-elf-gdbserver.1
com-gdb/share/man/man5/: i686-elf-gdbinit.5
com2/i686-elf/lib/ldscripts/: elf_i386.x  elf_i386.xbn  elf_i386.xc  elf_i386.xd  elf_i386.xdc  elf_i386.xdw  elf_i386.xn  elf_i386.xs  elf_i386.xsc  elf_i386.xsw  elf_i386.xw  elf_iamcu.x  elf_iamcu.xbn  elf_iamcu.xc  elf_iamcu.xd  elf_iamcu.xdc  elf_iamcu.xdw  elf_iamcu.xn  elf_iamcu.xs  elf_iamcu.xsc  elf_iamcu.xsw  elf_iamcu.xw
com2/lib/gcc/i686-elf/6.2.0/install-tools/: mkheaders.conf
com2/lib/gcc/i686-elf/6.2.0/plugin/include/: auto-host.h  configargs.h  insn-codes.h  insn-flags.h
com2/libexec/gcc/i686-elf/6.2.0/: collect2  liblto_plugin.la  lto-wrapper
com2/libexec/gcc/i686-elf/6.2.0/install-tools/: fixincl  mkheaders
com2/libexec/gcc/i686-elf/6.2.0/plugin/: gengtype
com2/share/info/: cpp.info  cppinternals.info  dir  gcc.info  gccinstall.info  gccint.info
com2/share/man/man1/: i686-elf-g++.1
patches/: 0001-macOS-makefile-build-using-i686-elf-cross-compilers.patch  0002-macOS-qemu-silence-raw-format-warning.patch  0003-macOS-pintos-fix-host-CPU-timeout-bug-on-mac.patch  0004-macOS-utils-build-without-stream-tty-support.patch  0005-macOS-tests-make-find-POSIX-compliant.patch
scripts/: backtrace  pintos  pintos-gdb
src/: Make.config  Makefile.build
src/devices/: timer.c
src/filesys/: file.c  file.h
src/tests/devices/: Rubric.alarm  alarm-priority.c  alarm-simultaneous.c  alarm-wait.c
src/threads/: fixed-point.h  synch.c  synch.h  thread.c  thread.h
src/userprog/: exception.c  exception.h  process.c  process.h  run  syscall.c  syscall.h
src/utils/: pintos
src/vm/: frame.c  frame.h  page.c  page.h  swap.c  swap.h
