cmake_minimum_required(VERSION 3.8)
project(PINTOS)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        com-gdb/bin/i686-elf-gdb
        com-gdb/include/gdb/jit-reader.h
        com-gdb/share/gdb/python/gdb/command/__init__.py
        com-gdb/share/gdb/python/gdb/command/explore.py
        com-gdb/share/gdb/python/gdb/command/frame_filters.py
        com-gdb/share/gdb/python/gdb/command/pretty_printers.py
        com-gdb/share/gdb/python/gdb/command/prompt.py
        com-gdb/share/gdb/python/gdb/command/type_printers.py
        com-gdb/share/gdb/python/gdb/command/unwinders.py
        com-gdb/share/gdb/python/gdb/command/xmethods.py
        com-gdb/share/gdb/python/gdb/function/__init__.py
        com-gdb/share/gdb/python/gdb/function/as_string.py
        com-gdb/share/gdb/python/gdb/function/caller_is.py
        com-gdb/share/gdb/python/gdb/function/strfns.py
        com-gdb/share/gdb/python/gdb/printer/__init__.py
        com-gdb/share/gdb/python/gdb/printer/bound_registers.py
        com-gdb/share/gdb/python/gdb/__init__.py
        com-gdb/share/gdb/python/gdb/FrameDecorator.py
        com-gdb/share/gdb/python/gdb/FrameIterator.py
        com-gdb/share/gdb/python/gdb/frames.py
        com-gdb/share/gdb/python/gdb/printing.py
        com-gdb/share/gdb/python/gdb/prompt.py
        com-gdb/share/gdb/python/gdb/types.py
        com-gdb/share/gdb/python/gdb/unwinder.py
        com-gdb/share/gdb/python/gdb/xmethod.py
        com-gdb/share/gdb/syscalls/aarch64-linux.xml
        com-gdb/share/gdb/syscalls/amd64-linux.xml
        com-gdb/share/gdb/syscalls/arm-linux.xml
        com-gdb/share/gdb/syscalls/freebsd.xml
        com-gdb/share/gdb/syscalls/gdb-syscalls.dtd
        com-gdb/share/gdb/syscalls/i386-linux.xml
        com-gdb/share/gdb/syscalls/mips-n32-linux.xml
        com-gdb/share/gdb/syscalls/mips-n64-linux.xml
        com-gdb/share/gdb/syscalls/mips-o32-linux.xml
        com-gdb/share/gdb/syscalls/ppc-linux.xml
        com-gdb/share/gdb/syscalls/ppc64-linux.xml
        com-gdb/share/gdb/syscalls/s390-linux.xml
        com-gdb/share/gdb/syscalls/s390x-linux.xml
        com-gdb/share/gdb/syscalls/sparc-linux.xml
        com-gdb/share/gdb/syscalls/sparc64-linux.xml
        com-gdb/share/gdb/system-gdbinit/elinos.py
        com-gdb/share/gdb/system-gdbinit/wrs-linux.py
        com-gdb/share/info/annotate.info
        com-gdb/share/info/bfd.info
        com-gdb/share/info/dir
        com-gdb/share/info/gdb.info
        com-gdb/share/info/stabs.info
        com-gdb/share/man/man1/i686-elf-gdb.1
        com-gdb/share/man/man1/i686-elf-gdbserver.1
        com-gdb/share/man/man5/i686-elf-gdbinit.5
        com2/bin/i686-elf-addr2line
        com2/bin/i686-elf-ar
        com2/bin/i686-elf-as
        com2/bin/i686-elf-c++
        com2/bin/i686-elf-c++filt
        com2/bin/i686-elf-cpp
        com2/bin/i686-elf-elfedit
        com2/bin/i686-elf-g++
        com2/bin/i686-elf-gcc
        com2/bin/i686-elf-gcc-6.2.0
        com2/bin/i686-elf-gcc-ar
        com2/bin/i686-elf-gcc-nm
        com2/bin/i686-elf-gcc-ranlib
        com2/bin/i686-elf-gcov
        com2/bin/i686-elf-gcov-tool
        com2/bin/i686-elf-gprof
        com2/bin/i686-elf-ld
        com2/bin/i686-elf-ld.bfd
        com2/bin/i686-elf-nm
        com2/bin/i686-elf-objcopy
        com2/bin/i686-elf-objdump
        com2/bin/i686-elf-ranlib
        com2/bin/i686-elf-readelf
        com2/bin/i686-elf-size
        com2/bin/i686-elf-strings
        com2/bin/i686-elf-strip
        com2/i686-elf/bin/ar
        com2/i686-elf/bin/as
        com2/i686-elf/bin/ld
        com2/i686-elf/bin/ld.bfd
        com2/i686-elf/bin/nm
        com2/i686-elf/bin/objcopy
        com2/i686-elf/bin/objdump
        com2/i686-elf/bin/ranlib
        com2/i686-elf/bin/readelf
        com2/i686-elf/bin/strip
        com2/i686-elf/lib/ldscripts/elf_i386.x
        com2/i686-elf/lib/ldscripts/elf_i386.xbn
        com2/i686-elf/lib/ldscripts/elf_i386.xc
        com2/i686-elf/lib/ldscripts/elf_i386.xd
        com2/i686-elf/lib/ldscripts/elf_i386.xdc
        com2/i686-elf/lib/ldscripts/elf_i386.xdw
        com2/i686-elf/lib/ldscripts/elf_i386.xn
        com2/i686-elf/lib/ldscripts/elf_i386.xr
        com2/i686-elf/lib/ldscripts/elf_i386.xs
        com2/i686-elf/lib/ldscripts/elf_i386.xsc
        com2/i686-elf/lib/ldscripts/elf_i386.xsw
        com2/i686-elf/lib/ldscripts/elf_i386.xu
        com2/i686-elf/lib/ldscripts/elf_i386.xw
        com2/i686-elf/lib/ldscripts/elf_iamcu.x
        com2/i686-elf/lib/ldscripts/elf_iamcu.xbn
        com2/i686-elf/lib/ldscripts/elf_iamcu.xc
        com2/i686-elf/lib/ldscripts/elf_iamcu.xd
        com2/i686-elf/lib/ldscripts/elf_iamcu.xdc
        com2/i686-elf/lib/ldscripts/elf_iamcu.xdw
        com2/i686-elf/lib/ldscripts/elf_iamcu.xn
        com2/i686-elf/lib/ldscripts/elf_iamcu.xr
        com2/i686-elf/lib/ldscripts/elf_iamcu.xs
        com2/i686-elf/lib/ldscripts/elf_iamcu.xsc
        com2/i686-elf/lib/ldscripts/elf_iamcu.xsw
        com2/i686-elf/lib/ldscripts/elf_iamcu.xu
        com2/i686-elf/lib/ldscripts/elf_iamcu.xw
        com2/lib/gcc/i686-elf/6.2.0/include/adxintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/ammintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/avx2intrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/avx512bwintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/avx512cdintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/avx512dqintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/avx512erintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/avx512fintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/avx512ifmaintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/avx512ifmavlintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/avx512pfintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/avx512vbmiintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/avx512vbmivlintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/avx512vlbwintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/avx512vldqintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/avx512vlintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/avxintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/bmi2intrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/bmiintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/bmmintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/clflushoptintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/clwbintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/clzerointrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/cpuid.h
        com2/lib/gcc/i686-elf/6.2.0/include/cross-stdarg.h
        com2/lib/gcc/i686-elf/6.2.0/include/emmintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/f16cintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/float.h
        com2/lib/gcc/i686-elf/6.2.0/include/fma4intrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/fmaintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/fxsrintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/ia32intrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/immintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/iso646.h
        com2/lib/gcc/i686-elf/6.2.0/include/lwpintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/lzcntintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/mm3dnow.h
        com2/lib/gcc/i686-elf/6.2.0/include/mm_malloc.h
        com2/lib/gcc/i686-elf/6.2.0/include/mmintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/mwaitxintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/nmmintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/pcommitintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/pkuintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/pmmintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/popcntintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/prfchwintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/rdseedintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/rtmintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/shaintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/smmintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/stdalign.h
        com2/lib/gcc/i686-elf/6.2.0/include/stdarg.h
        com2/lib/gcc/i686-elf/6.2.0/include/stdatomic.h
        com2/lib/gcc/i686-elf/6.2.0/include/stdbool.h
        com2/lib/gcc/i686-elf/6.2.0/include/stddef.h
        com2/lib/gcc/i686-elf/6.2.0/include/stdfix.h
        com2/lib/gcc/i686-elf/6.2.0/include/stdint-gcc.h
        com2/lib/gcc/i686-elf/6.2.0/include/stdint.h
        com2/lib/gcc/i686-elf/6.2.0/include/stdnoreturn.h
        com2/lib/gcc/i686-elf/6.2.0/include/tbmintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/tgmath.h
        com2/lib/gcc/i686-elf/6.2.0/include/tmmintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/unwind.h
        com2/lib/gcc/i686-elf/6.2.0/include/varargs.h
        com2/lib/gcc/i686-elf/6.2.0/include/wmmintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/x86intrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/xmmintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/xopintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/xsavecintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/xsaveintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/xsaveoptintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/xsavesintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include/xtestintrin.h
        com2/lib/gcc/i686-elf/6.2.0/include-fixed/limits.h
        com2/lib/gcc/i686-elf/6.2.0/include-fixed/syslimits.h
        com2/lib/gcc/i686-elf/6.2.0/install-tools/include/limits.h
        com2/lib/gcc/i686-elf/6.2.0/install-tools/gsyslimits.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/c-family/c-common.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/c-family/c-objc.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/c-family/c-pragma.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/c-family/c-pretty-print.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/config/i386/att.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/config/i386/i386-opts.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/config/i386/i386-protos.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/config/i386/i386.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/config/i386/i386elf.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/config/i386/unix.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/config/dbxelf.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/config/elfos.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/config/initfini-array.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/config/newlib-stdint.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/config/vxworks-dummy.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/cp/cp-tree.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/cp/cxx-pretty-print.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/cp/name-lookup.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/cp/type-utils.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/addresses.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/alias.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/alloc-pool.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/ansidecl.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/asan.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/attribs.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/auto-host.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/auto-profile.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/backend.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/basic-block.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/bb-reorder.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/bitmap.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/builtins.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/bversion.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/c-tree.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/calls.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/ccmp.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/cfg.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/cfganal.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/cfgbuild.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/cfgcleanup.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/cfgexpand.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/cfghooks.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/cfgloop.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/cfgloopmanip.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/cfgrtl.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/cgraph.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/cilk.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/collect-utils.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/collect2-aix.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/collect2.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/conditions.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/config.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/configargs.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/context.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/convert.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/coretypes.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/coverage.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/cppbuiltin.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/cppdefault.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/cpplib.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/cselib.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/data-streamer.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/dbgcnt.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/dbxout.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/dce.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/ddg.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/debug.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/defaults.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/df.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/dfp.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/diagnostic-color.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/diagnostic-core.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/diagnostic.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/dojump.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/dominance.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/domwalk.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/double-int.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/dumpfile.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/dwarf2asm.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/dwarf2out.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/emit-rtl.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/errors.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/et-forest.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/except.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/explow.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/expmed.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/expr.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/fibonacci_heap.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/file-find.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/filenames.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/fixed-value.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/flag-types.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/flags.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/fold-const-call.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/fold-const.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/function.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gcc-plugin.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gcc-rich-location.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gcc-symtab.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gcc.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gcov-io.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gcse-common.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gcse.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/generic-match.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gengtype.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/genrtl.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gensupport.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/ggc-internal.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/ggc.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gimple-builder.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gimple-expr.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gimple-fold.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gimple-iterator.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gimple-low.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gimple-match.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gimple-predict.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gimple-pretty-print.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gimple-ssa.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gimple-streamer.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gimple-walk.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gimple.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gimplify-me.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gimplify.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/glimits.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/graph.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/graphds.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/graphite.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gstab.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gsyms.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gsyslimits.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/gtype-desc.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/hard-reg-set.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/hash-map-traits.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/hash-map.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/hash-set.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/hash-table.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/hash-traits.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/hashtab.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/highlev-plugin-common.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/hooks.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/hosthooks-def.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/hosthooks.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/hsa-brig-format.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/hsa.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/hw-doloop.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/hwint.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/ifcvt.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/inchash.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/incpath.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/input.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/insn-addr.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/insn-codes.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/insn-constants.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/insn-flags.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/insn-modes.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/internal-fn.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/intl.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/ipa-chkp.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/ipa-icf-gimple.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/ipa-icf.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/ipa-inline.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/ipa-prop.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/ipa-ref.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/ipa-reference.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/ipa-utils.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/ira-int.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/ira.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/is-a.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/langhooks-def.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/langhooks.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/lcm.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/libfuncs.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/libiberty.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/limitx.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/limity.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/line-map.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/loop-unroll.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/lower-subreg.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/lra-int.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/lra.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/lto-compress.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/lto-section-names.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/lto-streamer.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/machmode.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/md5.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/mem-stats-traits.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/mem-stats.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/memory-block.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/obstack.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/omp-low.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/optabs-libfuncs.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/optabs-query.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/optabs-tree.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/optabs.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/options.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/opts-diagnostic.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/opts.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/output.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/params-enum.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/params-list.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/params.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/pass_manager.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/plugin-api.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/plugin-version.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/plugin.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/predict.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/prefix.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/pretty-print.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/print-rtl.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/print-tree.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/profile.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/read-md.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/real.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/realmpfr.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/recog.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/regcprop.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/regrename.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/regs.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/regset.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/reload.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/resource.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/rtl-chkp.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/rtl-error.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/rtl-iter.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/rtl.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/rtlhash.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/rtlhooks-def.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/safe-ctype.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/sbitmap.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/sched-int.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/sdbout.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/sel-sched-dump.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/sel-sched-ir.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/sel-sched.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/sese.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/shrink-wrap.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/signop.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/sparseset.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/spellcheck.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/splay-tree.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/sreal.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/ssa-iterators.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/ssa.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/statistics.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/stmt.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/stor-layout.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/streamer-hooks.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/stringpool.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/symbol-summary.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/symtab.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/system.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/target-def.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/target-globals.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/target-hooks-macros.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/target.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/targhooks.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/timevar.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tm-preds.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tm.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tm_p.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/toplev.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tracer.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/trans-mem.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-affine.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-cfg.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-cfgcleanup.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-check.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-chkp.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-chrec.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-core.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-data-ref.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-dfa.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-diagnostic.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-dump.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-eh.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-hash-traits.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-hasher.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-inline.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-into-ssa.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-iterator.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-nested.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-object-size.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-outof-ssa.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-parloops.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-pass.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-phinodes.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-pretty-print.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-scalar-evolution.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-ssa-address.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-ssa-alias.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-ssa-coalesce.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-ssa-dom.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-ssa-live.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-ssa-loop-ivopts.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-ssa-loop-manip.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-ssa-loop-niter.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-ssa-loop.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-ssa-operands.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-ssa-propagate.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-ssa-sccvn.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-ssa-scopedtables.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-ssa-ter.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-ssa-threadbackward.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-ssa-threadedge.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-ssa-threadupdate.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-ssa.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-ssanames.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-stdarg.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-streamer.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree-vectorizer.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tree.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tsan.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/tsystem.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/typeclass.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/typed-splay-tree.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/ubsan.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/valtrack.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/value-prof.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/varasm.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/vec.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/version.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/vmsdbg.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/vtable-verify.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/wide-int-print.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/wide-int.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/xcoff.h
        com2/lib/gcc/i686-elf/6.2.0/plugin/include/xcoffout.h
        com2/libexec/gcc/i686-elf/6.2.0/install-tools/fixinc.sh
        com2/libexec/gcc/i686-elf/6.2.0/install-tools/fixincl
        com2/libexec/gcc/i686-elf/6.2.0/install-tools/mkheaders
        com2/libexec/gcc/i686-elf/6.2.0/install-tools/mkinstalldirs
        com2/libexec/gcc/i686-elf/6.2.0/plugin/gengtype
        com2/libexec/gcc/i686-elf/6.2.0/cc1
        com2/libexec/gcc/i686-elf/6.2.0/cc1plus
        com2/libexec/gcc/i686-elf/6.2.0/collect2
        com2/libexec/gcc/i686-elf/6.2.0/liblto_plugin.0.so
        com2/libexec/gcc/i686-elf/6.2.0/liblto_plugin.la
        com2/libexec/gcc/i686-elf/6.2.0/lto-wrapper
        com2/libexec/gcc/i686-elf/6.2.0/lto1
        com2/share/info/as.info
        com2/share/info/bfd.info
        com2/share/info/binutils.info
        com2/share/info/cpp.info
        com2/share/info/cppinternals.info
        com2/share/info/dir
        com2/share/info/gcc.info
        com2/share/info/gccinstall.info
        com2/share/info/gccint.info
        com2/share/info/gprof.info
        com2/share/info/ld.info
        com2/share/man/man1/i686-elf-addr2line.1
        com2/share/man/man1/i686-elf-ar.1
        com2/share/man/man1/i686-elf-as.1
        com2/share/man/man1/i686-elf-c++filt.1
        com2/share/man/man1/i686-elf-cpp.1
        com2/share/man/man1/i686-elf-dlltool.1
        com2/share/man/man1/i686-elf-elfedit.1
        com2/share/man/man1/i686-elf-g++.1
        com2/share/man/man1/i686-elf-gcc.1
        com2/share/man/man1/i686-elf-gcov.1
        com2/share/man/man1/i686-elf-gprof.1
        com2/share/man/man1/i686-elf-ld.1
        com2/share/man/man1/i686-elf-nlmconv.1
        com2/share/man/man1/i686-elf-nm.1
        com2/share/man/man1/i686-elf-objcopy.1
        com2/share/man/man1/i686-elf-objdump.1
        com2/share/man/man1/i686-elf-ranlib.1
        com2/share/man/man1/i686-elf-readelf.1
        com2/share/man/man1/i686-elf-size.1
        com2/share/man/man1/i686-elf-strings.1
        com2/share/man/man1/i686-elf-strip.1
        com2/share/man/man1/i686-elf-windmc.1
        com2/share/man/man1/i686-elf-windres.1
        com2/share/man/man7/fsf-funding.7
        com2/share/man/man7/gfdl.7
        com2/share/man/man7/gpl.7
        doc/44bsd.texi
        doc/alarmclock.pdf
        doc/alarmclock.tex
        doc/bibliography.texi
        doc/codebase.texi
        doc/debug.texi
        doc/devel.texi
        doc/devices.tmpl
        doc/doc.texi
        doc/installation.texi
        doc/intro.texi
        doc/license.texi
        doc/localgitinstructions.texi
        doc/localsettings.texi
        doc/Makefile
        doc/pintos-ic.texi
        doc/pintos-t2h.init
        doc/pintos.css
        doc/reference.texi
        doc/sample.tmpl
        doc/standards.texi
        doc/task0_questions.texi
        doc/task0_sheet.texi
        doc/texi2html
        doc/texinfo.tex
        doc/threads.texi
        doc/threads.tmpl
        doc/userprog.texi
        doc/userprog.tmpl
        doc/vm.texi
        doc/vm.tmpl
        patches/0001-macOS-makefile-build-using-i686-elf-cross-compilers.patch
        patches/0002-macOS-qemu-silence-raw-format-warning.patch
        patches/0003-macOS-pintos-fix-host-CPU-timeout-bug-on-mac.patch
        patches/0004-macOS-utils-build-without-stream-tty-support.patch
        patches/0005-macOS-tests-make-find-POSIX-compliant.patch
        scripts/backtrace
        scripts/gdb-macros
        scripts/pintos
        scripts/pintos-gdb
        scripts/pintos-mkdisk
        scripts/pintos-set-cmdline
        scripts/Pintos.pm
        specs/freevga/vga/256left.gif
        specs/freevga/vga/256left.txt
        specs/freevga/vga/256right.gif
        specs/freevga/vga/256right.txt
        specs/freevga/vga/attrreg.htm
        specs/freevga/vga/char.txt
        specs/freevga/vga/colorreg.htm
        specs/freevga/vga/crtcreg.htm
        specs/freevga/vga/extreg.htm
        specs/freevga/vga/graphreg.htm
        specs/freevga/vga/license.htm
        specs/freevga/vga/paging.gif
        specs/freevga/vga/paging.txt
        specs/freevga/vga/portidx.htm
        specs/freevga/vga/seqpack.gif
        specs/freevga/vga/seqpack.txt
        specs/freevga/vga/seqplanr.gif
        specs/freevga/vga/seqplanr.txt
        specs/freevga/vga/seqreg.htm
        specs/freevga/vga/textcur.htm
        specs/freevga/vga/vga.htm
        specs/freevga/vga/vgacrtc.htm
        specs/freevga/vga/vgadac.htm
        specs/freevga/vga/vgafunc.htm
        specs/freevga/vga/vgafx.htm
        specs/freevga/vga/vgamem.htm
        specs/freevga/vga/vgareg.htm
        specs/freevga/vga/vgargidx.htm
        specs/freevga/vga/vgaseq.htm
        specs/freevga/vga/vgatext.htm
        specs/freevga/vga/virtual.gif
        specs/freevga/vga/virtual.txt
        specs/freevga/feedback.htm
        specs/freevga/freevga.htm
        specs/freevga/glossary.htm
        specs/freevga/hardovr.htm
        specs/freevga/hardrec.htm
        specs/freevga/home.htm
        specs/freevga/license.htm
        specs/freevga/llintro.htm
        specs/freevga/vtiming.htm
        specs/kbd/table.h
        specs/sysv-abi-update.html/ch4.eheader.html
        specs/sysv-abi-update.html/ch4.intro.html
        specs/sysv-abi-update.html/ch4.reloc.html
        specs/sysv-abi-update.html/ch4.sheader.html
        specs/sysv-abi-update.html/ch4.strtab.html
        specs/sysv-abi-update.html/ch4.symtab.html
        specs/sysv-abi-update.html/ch5.dynamic.html
        specs/sysv-abi-update.html/ch5.intro.html
        specs/sysv-abi-update.html/ch5.pheader.html
        specs/sysv-abi-update.html/ch5.prog_loading.html
        specs/sysv-abi-update.html/contents.gif
        specs/sysv-abi-update.html/contents.html
        specs/sysv-abi-update.html/init_example.gif
        specs/sysv-abi-update.html/next.gif
        specs/sysv-abi-update.html/previous.gif
        specs/sysv-abi-update.html/revision.html
        specs/sysv-abi-update.html/warning.gif
        specs/8254.pdf
        specs/8259A.pdf
        specs/ata-3-std.pdf
        specs/elf.pdf
        specs/mc146818a.pdf
        specs/pc16550d.pdf
        specs/sysv-abi-4.1.pdf
        specs/sysv-abi-i386-4.pdf
        src/devices/block.c
        src/devices/block.h
        src/devices/ide.c
        src/devices/ide.h
        src/devices/input.c
        src/devices/input.h
        src/devices/intq.c
        src/devices/intq.h
        src/devices/kbd.c
        src/devices/kbd.h
        src/devices/partition.c
        src/devices/partition.h
        src/devices/pit.c
        src/devices/pit.h
        src/devices/rtc.c
        src/devices/rtc.h
        src/devices/serial.c
        src/devices/serial.h
        src/devices/shutdown.c
        src/devices/shutdown.h
        src/devices/speaker.c
        src/devices/speaker.h
        src/devices/timer.c
        src/devices/timer.h
        src/devices/vga.c
        src/devices/vga.h
        src/examples/bubsort.c
        src/examples/cat.c
        src/examples/cmp.c
        src/examples/cp.c
        src/examples/echo.c
        src/examples/halt.c
        src/examples/hex-dump.c
        src/examples/insult.c
        src/examples/lineup.c
        src/examples/matmult.c
        src/examples/mcat.c
        src/examples/mcp.c
        src/examples/recursor.c
        src/examples/rm.c
        src/filesys/directory.c
        src/filesys/directory.h
        src/filesys/file.c
        src/filesys/file.h
        src/filesys/filesys.c
        src/filesys/filesys.h
        src/filesys/free-map.c
        src/filesys/free-map.h
        src/filesys/fsutil.c
        src/filesys/fsutil.h
        src/filesys/inode.c
        src/filesys/inode.h
        src/filesys/off_t.h
        src/lib/kernel/bitmap.c
        src/lib/kernel/bitmap.h
        src/lib/kernel/console.c
        src/lib/kernel/console.h
        src/lib/kernel/debug.c
        src/lib/kernel/hash.c
        src/lib/kernel/hash.h
        src/lib/kernel/list.c
        src/lib/kernel/list.h
        src/lib/kernel/stdio.h
        src/lib/user/console.c
        src/lib/user/debug.c
        src/lib/user/entry.c
        src/lib/user/stdio.h
        src/lib/user/syscall.c
        src/lib/user/syscall.h
        src/lib/arithmetic.c
        src/lib/ctype.h
        src/lib/debug.c
        src/lib/debug.h
        src/lib/inttypes.h
        src/lib/limits.h
        src/lib/packed.h
        src/lib/random.c
        src/lib/random.h
        src/lib/round.h
        src/lib/stdarg.h
        src/lib/stdbool.h
        src/lib/stddef.h
        src/lib/stdint.h
        src/lib/stdio.c
        src/lib/stdio.h
        src/lib/stdlib.c
        src/lib/stdlib.h
        src/lib/string.c
        src/lib/string.h
        src/lib/syscall-nr.h
        src/lib/ustar.c
        src/lib/ustar.h
        src/misc/gcc-3.3.6-cross-howto
        src/misc/gdb-macros
        src/tests/devices/alarm-negative.c
        src/tests/devices/alarm-priority.c
        src/tests/devices/alarm-simultaneous.c
        src/tests/devices/alarm-wait.c
        src/tests/devices/alarm-zero.c
        src/tests/devices/tests.c
        src/tests/devices/tests.h
        src/tests/filesys/base/child-syn-read.c
        src/tests/filesys/base/child-syn-wrt.c
        src/tests/filesys/base/lg-create.c
        src/tests/filesys/base/lg-full.c
        src/tests/filesys/base/lg-random.c
        src/tests/filesys/base/lg-seq-block.c
        src/tests/filesys/base/lg-seq-random.c
        src/tests/filesys/base/sm-create.c
        src/tests/filesys/base/sm-full.c
        src/tests/filesys/base/sm-random.c
        src/tests/filesys/base/sm-seq-block.c
        src/tests/filesys/base/sm-seq-random.c
        src/tests/filesys/base/syn-read.c
        src/tests/filesys/base/syn-read.h
        src/tests/filesys/base/syn-remove.c
        src/tests/filesys/base/syn-write.c
        src/tests/filesys/base/syn-write.h
        src/tests/filesys/seq-test.c
        src/tests/filesys/seq-test.h
        src/tests/internal/list.c
        src/tests/internal/stdio.c
        src/tests/internal/stdlib.c
        src/tests/threads/mlfqs-block.c
        src/tests/threads/mlfqs-fair.c
        src/tests/threads/mlfqs-load-1.c
        src/tests/threads/mlfqs-load-60.c
        src/tests/threads/mlfqs-load-avg.c
        src/tests/threads/mlfqs-recent-1.c
        src/tests/threads/priority-change.c
        src/tests/threads/priority-condvar.c
        src/tests/threads/priority-donate-chain.c
        src/tests/threads/priority-donate-lower.c
        src/tests/threads/priority-donate-multiple.c
        src/tests/threads/priority-donate-multiple2.c
        src/tests/threads/priority-donate-nest.c
        src/tests/threads/priority-donate-one.c
        src/tests/threads/priority-donate-sema.c
        src/tests/threads/priority-fifo.c
        src/tests/threads/priority-preempt.c
        src/tests/threads/priority-sema.c
        src/tests/threads/tests.c
        src/tests/threads/tests.h
        src/tests/userprog/no-vm/multi-oom.c
        src/tests/userprog/args.c
        src/tests/userprog/bad-jump.c
        src/tests/userprog/bad-jump2.c
        src/tests/userprog/bad-read.c
        src/tests/userprog/bad-read2.c
        src/tests/userprog/bad-write.c
        src/tests/userprog/bad-write2.c
        src/tests/userprog/boundary.c
        src/tests/userprog/boundary.h
        src/tests/userprog/child-bad.c
        src/tests/userprog/child-close.c
        src/tests/userprog/child-rox.c
        src/tests/userprog/child-simple.c
        src/tests/userprog/close-bad-fd.c
        src/tests/userprog/close-normal.c
        src/tests/userprog/close-stdin.c
        src/tests/userprog/close-stdout.c
        src/tests/userprog/close-twice.c
        src/tests/userprog/create-bad-ptr.c
        src/tests/userprog/create-bound.c
        src/tests/userprog/create-empty.c
        src/tests/userprog/create-exists.c
        src/tests/userprog/create-long.c
        src/tests/userprog/create-normal.c
        src/tests/userprog/create-null.c
        src/tests/userprog/exec-arg.c
        src/tests/userprog/exec-bad-ptr.c
        src/tests/userprog/exec-missing.c
        src/tests/userprog/exec-multiple.c
        src/tests/userprog/exec-once.c
        src/tests/userprog/exit.c
        src/tests/userprog/halt.c
        src/tests/userprog/multi-child-fd.c
        src/tests/userprog/multi-recurse.c
        src/tests/userprog/open-bad-ptr.c
        src/tests/userprog/open-boundary.c
        src/tests/userprog/open-empty.c
        src/tests/userprog/open-missing.c
        src/tests/userprog/open-normal.c
        src/tests/userprog/open-null.c
        src/tests/userprog/open-twice.c
        src/tests/userprog/read-bad-fd.c
        src/tests/userprog/read-bad-ptr.c
        src/tests/userprog/read-boundary.c
        src/tests/userprog/read-normal.c
        src/tests/userprog/read-stdout.c
        src/tests/userprog/read-zero.c
        src/tests/userprog/rox-child.c
        src/tests/userprog/rox-multichild.c
        src/tests/userprog/rox-simple.c
        src/tests/userprog/sc-bad-arg.c
        src/tests/userprog/sc-bad-sp.c
        src/tests/userprog/sc-boundary-2.c
        src/tests/userprog/sc-boundary.c
        src/tests/userprog/wait-bad-pid.c
        src/tests/userprog/wait-killed.c
        src/tests/userprog/wait-simple.c
        src/tests/userprog/wait-twice.c
        src/tests/userprog/write-bad-fd.c
        src/tests/userprog/write-bad-ptr.c
        src/tests/userprog/write-boundary.c
        src/tests/userprog/write-normal.c
        src/tests/userprog/write-stdin.c
        src/tests/userprog/write-zero.c
        src/tests/vm/child-inherit.c
        src/tests/vm/child-linear.c
        src/tests/vm/child-mm-wrt.c
        src/tests/vm/child-qsort-mm.c
        src/tests/vm/child-qsort.c
        src/tests/vm/child-sort.c
        src/tests/vm/mmap-bad-fd.c
        src/tests/vm/mmap-clean.c
        src/tests/vm/mmap-close.c
        src/tests/vm/mmap-exit.c
        src/tests/vm/mmap-inherit.c
        src/tests/vm/mmap-misalign.c
        src/tests/vm/mmap-null.c
        src/tests/vm/mmap-over-code.c
        src/tests/vm/mmap-over-data.c
        src/tests/vm/mmap-over-stk.c
        src/tests/vm/mmap-overlap.c
        src/tests/vm/mmap-read.c
        src/tests/vm/mmap-remove.c
        src/tests/vm/mmap-shuffle.c
        src/tests/vm/mmap-twice.c
        src/tests/vm/mmap-unmap.c
        src/tests/vm/mmap-write.c
        src/tests/vm/mmap-zero.c
        src/tests/vm/page-linear.c
        src/tests/vm/page-merge-mm.c
        src/tests/vm/page-merge-par.c
        src/tests/vm/page-merge-seq.c
        src/tests/vm/page-merge-stk.c
        src/tests/vm/page-parallel.c
        src/tests/vm/page-shuffle.c
        src/tests/vm/parallel-merge.c
        src/tests/vm/parallel-merge.h
        src/tests/vm/pt-bad-addr.c
        src/tests/vm/pt-bad-read.c
        src/tests/vm/pt-big-stk-obj.c
        src/tests/vm/pt-grow-bad.c
        src/tests/vm/pt-grow-pusha.c
        src/tests/vm/pt-grow-stack.c
        src/tests/vm/pt-grow-stk-sc.c
        src/tests/vm/pt-write-code-2.c
        src/tests/vm/pt-write-code.c
        src/tests/vm/qsort.c
        src/tests/vm/qsort.h
        src/tests/arc4.c
        src/tests/arc4.h
        src/tests/cksum.c
        src/tests/cksum.h
        src/tests/lib.c
        src/tests/lib.h
        src/tests/main.c
        src/tests/main.h
        src/threads/fixed-point.h
        src/threads/flags.h
        src/threads/init.c
        src/threads/init.h
        src/threads/interrupt.c
        src/threads/interrupt.h
        src/threads/intr-stubs.h
        src/threads/io.h
        src/threads/loader.h
        src/threads/malloc.c
        src/threads/malloc.h
        src/threads/palloc.c
        src/threads/palloc.h
        src/threads/pte.h
        src/threads/switch.h
        src/threads/synch.c
        src/threads/synch.h
        src/threads/thread.c
        src/threads/thread.h
        src/threads/vaddr.h
        src/userprog/exception.c
        src/userprog/exception.h
        src/userprog/gdt.c
        src/userprog/gdt.h
        src/userprog/pagedir.c
        src/userprog/pagedir.h
        src/userprog/process.c
        src/userprog/process.h
        src/userprog/syscall.c
        src/userprog/syscall.h
        src/userprog/tss.c
        src/userprog/tss.h
        src/utils/setitimer-helper.c
        src/utils/squish-pty.c
        src/utils/squish-unix.c
        src/vm/frame.c
        src/vm/frame.h
        src/vm/page.c
        src/vm/page.h
        src/vm/swap.c
        src/vm/swap.h
        src/LICENSE
        src/Make.config
        src/Makefile
        src/Makefile.build
        src/Makefile.kernel
        src/Makefile.userprog
        tests/Makefile
        AUTHORS
        LICENSE
        Makefile)

add_executable(PINTOS ${SOURCE_FILES})